k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credential
  labels:
    app.kubernetes.io/part-of: credential-classification
