k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credential-app
  namespace: credential
  labels:
    app.kubernetes.io/name: credential-classification
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: credential-classification
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
